--- a/AddressBook/Views/AddressBook/AddressBookLanding.cshtml
+++ b/AddressBook/Views/AddressBook/AddressBookLanding.cshtml
@@ -16,7 +16,7 @@
                 @Html.ActionLink("Create Address Book Contact", "CreateAddressBookContact")
             </li>
             <li>
-                @Html.ActionLink("Address Book", "AddressBookLanding")
+                @Html.ActionLink("AddressBook Search", "GetAddressBookListAll")
             </li>
         </ul>
 
